Skip cleanup if repo hasn't changed

--- a/pkg-update-on-host.yml
+++ b/pkg-update-on-host.yml
@@ -19,6 +19,8 @@
     - name: autoclean repositories
       apt:
         autoclean: yes
+      when: packages.stderr != ""
     - name: autoremove dependencies
       apt:
         autoremove: yes  
+      when: packages.stderr != ""
